// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can be bounded to a volume at instantiation 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "PersistentVolumeClaim",
    "metadata": Object {
      "name": "test-persistentvolumeclaim-c8af0974",
    },
    "spec": Object {
      "volumeMode": "Filesystem",
      "volumeName": "vol",
    },
  },
]
`;

exports[`can be bounded to a volume post instantiation 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "PersistentVolumeClaim",
    "metadata": Object {
      "name": "test-persistentvolumeclaim-c8af0974",
    },
    "spec": Object {
      "volumeMode": "Filesystem",
      "volumeName": "vol",
    },
  },
]
`;

exports[`can grant permissions on imported 1`] = `
Array [
  Object {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "Role",
    "metadata": Object {
      "name": "test-role-c8eba390",
    },
    "rules": Array [
      Object {
        "apiGroups": Array [
          "",
        ],
        "resourceNames": Array [
          "claim",
        ],
        "resources": Array [
          "persistentvolumeclaims",
        ],
        "verbs": Array [
          "get",
          "list",
          "watch",
        ],
      },
    ],
  },
]
`;

exports[`custom 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "PersistentVolumeClaim",
    "metadata": Object {
      "name": "test-persistentvolumeclaim-c8af0974",
    },
    "spec": Object {
      "accessModes": Array [
        "ReadWriteMany",
      ],
      "resources": Object {
        "requests": Object {
          "storage": "50Gi",
        },
      },
      "storageClassName": "storage-class",
      "volumeMode": "Block",
    },
  },
]
`;

exports[`defaults 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "PersistentVolumeClaim",
    "metadata": Object {
      "name": "test-persistentvolumeclaim-c8af0974",
    },
    "spec": Object {
      "volumeMode": "Filesystem",
    },
  },
]
`;
